Add production manager features, analytics, gantt chart, and database migrations

--- a/package.json
+++ b/package.json
@@ -20,6 +20,9 @@
     "@radix-ui/react-toast": "^1.2.1",
     "@supabase/ssr": "^0.5.1",
     "@supabase/supabase-js": "^2.45.4",
+    "@visactor/react-vchart": "^2.0.16",
+    "@visactor/react-vtable": "^1.23.2",
+    "@visactor/vtable-gantt": "^1.23.2",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "date-fns": "^3.6.0",
